# visionary-backend

./: .air.toml  .editorconfig  .env  .gitignore  .rustfmt.toml  CODING-STYLE.md  Cargo.toml  Dockerfile  Makefile.toml  README.md  docker-compose.yml  go.mod  go.sum  go.work  go.work.sum  prometheus.yml
modules/adapters/: Cargo.toml
modules/adapters/src/: lib.rs
modules/adapters/src/primary/middlewares/: auth_middleware.rs  role_middleware.rs
modules/adapters/src/primary/routes/: mod.rs
modules/adapters/src/primary/routes/v1/: mod.rs
modules/adapters/src/primary/routes/v1/accounts/: find_account_with_email_function.rs  find_accounts_function.rs  find_profile_function.rs  mod.rs  routes.rs
modules/adapters/src/primary/routes/v1/accounts/blogs/: delete_blog_function.rs  mod.rs  publish_blog_function.rs  update_blog_function.rs
modules/adapters/src/primary/routes/v1/accounts/experiences/: add_experience_function.rs  find_experiences_function.rs
modules/adapters/src/primary/routes/v1/accounts/roles/: add_role_function.rs  find_role_function.rs  (+2 more)
modules/adapters/src/primary/routes/v1/auth/: mod.rs  oauth.rs  oauth_callback_function.rs  oauth_google_callback_function.rs  oauth_init_function.rs  refresh_token_function.rs  routes.rs  sign_in.rs  sign_in_function.rs  sign_out_function.rs  sign_up.rs  sign_up_function.rs
modules/adapters/src/primary/routes/v1/blogs/: find_blogs_function.rs  mod.rs  routes.rs
modules/adapters/src/primary/routes/v1/categories/: create_category_function.rs  find_categories_function.rs  mod.rs  routes.rs  update_category_function.rs
modules/adapters/src/primary/routes/v1/experiences/: mod.rs
modules/adapters/src/primary/routes/v1/globals/: mod.rs  routes.rs
modules/adapters/src/primary/routes/v1/sessions/: find_sessions_function.rs  mod.rs  routes.rs
modules/adapters/src/primary/routes/v1/works/: mod.rs  routes.rs
modules/adapters/src/secondary/: mod.rs
modules/adapters/src/secondary/apis/: auth_api_impl.rs  mod.rs
modules/adapters/src/secondary/repositories/: account_repository_impl.rs  mod.rs  notification_repository_impl.rs  provider_repository_impl.rs  session_repository_impl.rs
modules/adapters/src/secondary/repositories/models/: account_schema.rs  base_schema.rs  blog_schema.rs  category_schema.rs  experience_schema.rs  mod.rs  notification_schema.rs  project_schema.rs  provider_schema.rs  role_schema.rs  session_schema.rs
modules/adapters/src/secondary/repositories/mongodb/: mod.rs  mongo_account_repository.rs  mongo_base_repository.rs  mongo_blog_repository.rs  mongo_category_repository.rs  mongo_experience_repository.rs  mongo_notification_repository.rs  mongo_project_repository.rs  mongo_provider_repository.rs  mongo_role_repository.rs  mongo_session_repository.rs  mongo_work_repository.rs
modules/adapters/src/secondary/repositories/mongodb/schemas/: account_schema.rs  base_schema.rs  blog_schema.rs  category_schema.rs  experience_schema.rs  mod.rs  provider_schema.rs  role_schema.rs  session_schema.rs  work_schema.rs
modules/adapters/src/secondary/repositories/scylla/: mod.rs  scylla_account_repository.rs  scylla_base_repository.rs  scylla_blog_repository.rs  scylla_category_repository.rs  scylla_experience_repository.rs  scylla_notification_repository.rs  scylla_project_repository.rs  scylla_provider_repository.rs  scylla_role_repository.rs  scylla_session_repository.rs
modules/adapters/src/shared/: mod.rs  types.rs
modules/adapters/src/shared/di/: container.rs  mod.rs  repository_module.rs  service_module.rs  state.rs
modules/adapters/src/shared/firebase/: firebase_auth.rs
modules/adapters/src/shared/models/: failure.rs  mod.rs  response.rs
modules/adapters/src/shared/utilities/: databases.rs  mod.rs  request_extractor.rs  route_logger.rs  validated_payload.rs  validated_query.rs
modules/application/: Cargo.toml
modules/application/src/: initialize.rs  main.rs
modules/application/src/study/: concurrency.rs  libraries.rs  mod.rs
modules/application/src/study/advanced/: leaky_bucket_algorithm.rs  mod.rs  token_bucket_algorithm.rs
modules/domain/: Cargo.toml
modules/domain/src/: lib.rs
modules/domain/src/apis/: auth_api.rs  messaging_api.rs  mod.rs
modules/domain/src/applications/: account_app_service.rs  auth_app_service.rs  category_app_service.rs  experience_app_service.rs  global_app_service.rs  mod.rs  notification_app_service.rs  session_app_service.rs
modules/domain/src/entities/: account_entity.rs  base_entity.rs  blog_entity.rs  category_entity.rs  course_entity.rs  enrollment_entity.rs  experience_entity.rs  lesson_entity.rs  mod.rs  notification_entity.rs  project_entity.rs  provider_entity.rs  role_entity.rs  session_entity.rs  work_entity.rs
modules/domain/src/repositories/: account_repository.rs  base_repository.rs  blog_repository.rs  category_repository.rs  experience_repository.rs  mod.rs  notification_repository.rs  project_repository.rs  provider_repository.rs  role_repository.rs  session_repository.rs  work_repository.rs
modules/domain/src/services/: account_service.rs  auth_service.rs  blog_service.rs  category_service.rs  experience_service.rs  mod.rs  notification_service.rs  project_service.rs  provider_service.rs  role_service.rs  session_service.rs  work_service.rs
modules/domain/src/usecases/: account_usecases.rs  auth_usecases.rs  category_usecases.rs  experience_usecases.rs  global_usecases.rs  mod.rs  notification_usecases.rs  session_usecases.rs
modules/domain/src/values/: auth_provider.rs  mod.rs  providers.rs  roles.rs
modules/shared/: Cargo.toml
modules/shared/src/: lib.rs  types.rs
modules/shared/src/configs/: configs.rs  mod.rs
modules/shared/src/cryptography/: asymmetric.rs  keypair.rs  mod.rs
modules/shared/src/functions/: deserialize_functions.rs  mod.rs  path_functions.rs
modules/shared/src/jwt/: claims.rs  keys.rs  manger.rs  mod.rs  service.rs
modules/shared/src/models/: failure.rs  filters.rs  mod.rs  paginate.rs
modules/shared/src/oauth2/: mod.rs  models.rs  oauth2_clients.rs  oauth2_providers.rs  oauth2_service.rs
(+106 files in other folders)
