[workspace.package]
version = "1.0.0"

[workspace]
resolver = "3"
members = [
    "modules/adapters",
    "modules/application",
    "modules/shared",
    "modules/domain"
]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
async-trait = "0.1.89"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = "1.48.0"
axum = "0.8.6"
tracing-subscriber = "0.3.20"
tracing = "0.1.41"
dotenv = "0.15.0"
config = "0.15.18"
once_cell = "1.21.3"
tower-http = "0.6.6"
openssl = "0.10.74"
jsonwebtoken = "10.1.0"
rand = "0.10.0-rc.0"
uuid = "1.18.1"
chrono = "0.4.42"
argon2 = "0.6.0-rc.1"
validator = "0.20.0"
