[workspace.package]
version = "1.0.0"

[workspace]
resolver = "3"
members = [
    "modules/adapters",
    "modules/application",
    "modules/shared",
    "modules/domain",
    "modules/processors"
]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
async-trait = "0.1.89"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = "1.48.0"
axum = "0.8.6"
tracing-subscriber = "0.3.20"
tracing = "0.1.41"
dotenv = "0.15.0"
config = "0.15.19"
once_cell = "1.21.3"
tower-http = "0.6.6"
openssl = "0.10.75"
jsonwebtoken = "10.2.0"
uuid = "1.18.1"
chrono = "0.4.42"
argon2 = "0.5.3"
validator = "0.20.0"
futures = "0.3.31"
mongodb = "3.3.0"
prometheus = "0.14.0"
scylla = "1.4.1"
rand = "0.10.0-rc.5"
regex = "1.12.2"
reqwest = "0.12.24"
oauth2 = "5.0.0"
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = "2.0.110"
rayon = "1.11.0"
crossbeam = "0.8.4"
scylla-migrate = "0.1.1"
markdown = "1.0.0"
