[package]
name = "adapters"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
shared = { path = "../shared" }
domain = { path = "../domain" }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
once_cell = { workspace = true }
validator = { workspace = true }
