[package]
name = "adapters"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
shared = { path = "../shared" }
domain = { path = "../domain" }
tokio = { workspace = true, features = ["sync"] }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
once_cell = { workspace = true }
validator = { workspace = true }
mongodb = { workspace = true }
futures = { workspace = true }
prometheus = { workspace = true }
scylla = { workspace = true }