[package]
name = "adapters"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
shared = { path = "../shared" }
domain = { path = "../domain" }
processors = { path = "../processors" }
uuid = { workspace = true, features = ["v4", "v7"] }
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
validator = { workspace = true }
mongodb = { workspace = true }
scylla = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
scylla-migrate = { workspace = true }
tracing = { workspace = true }
