[package]
name = "application"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
core = { path = "../core" }
domain = { path = "../domain" }
adapters = { path = "../adapters" }
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
dotenv = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace"] }