[package]
name = "domain"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
shared = { path = "../shared" }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["v7"] }
chrono = { workspace = true }
argon2 = { workspace = true }
validator = { workspace = true, features = ["derive"] }
regex = { workspace = true }
tokio = { workspace = true, features = ["full"] }
paste = { workspace = true }
