[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
dotenv = { workspace = true }
config = { workspace = true }
once_cell = { workspace = true }
openssl = { workspace = true }
jsonwebtoken = { workspace = true, features = ["rust_crypto"] }
rand = { workspace = true }
chrono = { workspace = true }
oauth2 = { workspace = true, features = ["reqwest"] }
uuid = { workspace = true, features = ["v7"] }
reqwest = { workspace = true, features = ["json"] }
validator = { workspace = true, features = ["derive"] }
mongodb = { workspace = true }
